--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 pictures/camel.JPEG
 pictures/animals.png
 pictures/professional_picture_medha.jpg
+pictures/hiking.JPG
 
 # local/secret files
 .env
